Stop text from overflowing on smaller screens

--- a/css.css
+++ b/css.css
@@ -8,7 +8,6 @@ body {
             display: flex;
             flex-direction: column;
             align-items: center;
-            /*justify-content: center;*/
         }
 
         .flex-container>div.text {
@@ -27,6 +26,7 @@ body {
         @media only screen and (max-width: 1000px) {
             .flex-container>div.text {
                 font-size: 40px;
+                max-width: 95%;
                 }
 
             pre {
